# aiogram_barber_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  constants.py  docker-compose.yaml  export_requirements.sh  main.py  models.py  pyproject.toml  session.py
aiogram_calendar/: __init__.py  common.py  schemas.py  simple_calendar.py
aiogram_calendar/tests/: test_simple_calendar.py
api/: entrypoint.sh  main.py  models.py  pyproject.toml  schemas.py  tasks.py
bot/: Dockerfile  db_config.py  entrypoint.sh  main.py  pyproject.toml
bot/aiogram_calendar/: __init__.py  simple_calendar.py
bot/aiogram_calendar/tests/: test_simple_calendar.py
bot/config/: __init__.py
bot/handlers/: client.py
bot/handlers/admin/: edit_appointments.py  edit_days.py  edit_users.py  get_appointments.py
bot/keyboards/: admin.py  client.py
bot/services/: appointments.py  custom_days.py  time_slots.py  users.py
config/: __init__.py
db/: Dockerfile  db_session.py  init_db.py  initial.sql  pg_hba.conf  postgresql.conf
db/sql_queries/: default_db.sql
handlers/: __init__.py  admin.py  client.py
handlers/admin/: edit_appointments.py  edit_days.py  edit_users.py  get_appointments.py
keyboards/: admin.py  client.py
migrations/: env.py
migrations/versions/: 0001_initial.py
services/: appointments.py  calendar_days.py  check_day.py  custom_days.py  database_queries.py  redis_data.py  time_slots.py  users.py
