[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["mgzv <anr.mgzv@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
litestar = {extras = ["sqlalchemy", "standard"], version = "^2.7.1"}


[tool.poetry.group.dev.dependencies]
isort = "5.13.2"
ruff = "0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
line_length = 120

[tool.ruff]
# Allow lines to be as long as 79 characters.
line-length = 120